--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
+    "starts": "npm run dev",
+     "start": "nod src/main.js",
     "build": "node build/build.js"
   },
   "dependencies": {
